<resources>
    <string name="app_name">Consultoria</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="endereco">Endereço do servidor</string>
    <string name="endereco_summary">Informe a URL do servidor de consultoria.</string>
    <string name="timeout_conexao">Timeout de conexão</string>
    <string name="timeout_conexao_summary">Este valor se refere ao tempo, em segundos, que o aplicativo irá aguardar até que seja estabelecida uma conexão com o servidor.</string>
    <string name="timeout_read">Timeout de leitura</string>
    <string name="timeout_read_summary">Este valor refere-se ao tempo, em segundos, que o aplicativo aguardará por uma resposta do servidor após estabelecer conexão.</string>
    <string name="timeout_write">Timeout de escrita</string>
    <string name="timeout_write_summary">Este valor se refere ao tempo, em segundos, que o aplicativo aguardará durante o envio de informações ao servidor após a conexão.</string>
    <string name="nao_foi_possivel_conectar">Não foi possível conectar no servidor, verifique as configurações de rede/internet.</string>
    <string name="erro_servidor">Ocorreu um erro ao executar essa operação</string>
    <string name="hint_username">Nome de usuário</string>
    <string name="hint_senha">Senha</string>
    <string name="login">Login</string>
    <string name="senha_obrigatoria">O campo senha é obrigatório</string>
    <string name="username_obrigatorio">Nome de usuário é obrigatório</string>
    <string name="cancelar">Cancelar</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="efetuando_login">Efetuando login....</string>
    <string name="config_atualizadas">Configurações atualizadas</string>
    <string name="erro_atualizar_config">Erro atualizar configurações</string>
    <string name="save">Salvar</string>
    <string name="configurar">Configurar</string>
    <string name="ok">OK</string>
    <string name="loading">Loading...</string>
    <string name="autenticando">Autenticando...</string>
    <string name="sem_conexao">Sem conexão de internet</string>
    <string name="categoria">Categoria</string>
    <string name="empresa">Empresa</string>
    <string name="usuario">Usuario</string>
    <string name="consulta_normas">Consultar normas</string>
    <string name="sair">Sair</string>
    <string name="codigo">Código</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>
    <string name="descricao_obrigatoria">Obrigatório informar uma descrição</string>
    <string name="consultando">Consultando...</string>
    <string name="usuario_nao_encontrado">Usuario não encontrado</string>
    <string name="nome">Nome</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="codigo_obrigatorio">Código obrigatório</string>
    <string name="nome_obrigatorio">Nome é obrigatório</string>
    <string name="salvando">Salvando....</string>
    <string name="consultar">Consultar</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="cnpj">CNPJ</string>
    <string name="codigo_postal">Código postal</string>
    <string name="codigo_pais">Código do País</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="endereco_empresa">Endereço</string>
    <string name="numero">Número</string>
    <string name="nenhuma_categoria">Nenhuma categoria foi encontrada</string>
    <string name="cnpj_obrigatorio">Obrigatório informar um CNPJ</string>
    <string name="postal_obrigatorio">Obrigatório informar código postal</string>
    <string name="pais_obrigatorio">Obrigatório informar país</string>
    <string name="estado_obrigatorio">Obrigatório informar estado</string>
    <string name="cidade_obrigatorio">Obrigatório informar cidade</string>
    <string name="bairro_obrigatorio">Obrigatório informar bairro</string>
    <string name="numero_obrigatorio">Obrigatório informar número</string>
    <string name="tipo">Tipo</string>
    <string name="endereco_norma_summary">Informe a URL do servidor de normas</string>
    <string name="endereco_norma">Endereço do servidor de normas</string>
    <string name="nao_configurado">Servidor não configurado</string>


    <string-array name="array_admin">
        <item>Usuário</item>
        <item>Consultor</item>
        <item>Administrador</item>
    </string-array>

    <string-array name="array_usuario">
        <item>Usuário</item>
        <item>Consultor</item>
    </string-array>

</resources>
