<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- editor.putString("url", configuration.getBaseUrl());
        editor.putInt("connect", configuration.getConnectTimeout());
        editor.putInt("read", configuration.getReadTimeout());
        editor.putInt("write", configuration.getWriteTimeout());-->

    <EditTextPreference
        android:defaultValue="https://pucasd-consultoria.herokuapp.com/"
        android:inputType="textUri"
        android:key="url"
        android:summary="@string/endereco_summary"
        android:title="@string/endereco" />

    <EditTextPreference
        android:defaultValue="https://pucasd-normas.herokuapp.com/"
        android:inputType="textUri"
        android:key="url_norma"
        android:summary="@string/endereco_norma_summary"
        android:title="@string/endereco_norma" />

    <EditTextPreference
        android:defaultValue="15"
        android:inputType="numberSigned"
        android:key="connect"
        android:summary="@string/timeout_conexao_summary"
        android:title="@string/timeout_conexao" />

    <EditTextPreference
        android:defaultValue="15"
        android:inputType="numberSigned"
        android:key="read"
        android:summary="@string/timeout_read_summary"
        android:title="@string/timeout_read" />

    <EditTextPreference
        android:defaultValue="15"
        android:inputType="numberSigned"
        android:key="write"
        android:summary="@string/timeout_write_summary"
        android:title="@string/timeout_write" />

</PreferenceScreen>