<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <include
        layout="@layout/loading_layout"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configurar" />

</LinearLayout>